# workflow-rs-wasm-terminal-websocket

./: Cargo.toml  README.md  bacon.toml  mprocs.yaml
backend/: Cargo.toml  bacon.toml
backend/assets/: id_rsa_testing  id_rsa_testing.pub
backend/src/: main.rs  ssh_echo_server.rs  target_client.rs  websocket_server.rs
frontend/: Cargo.toml  README.md  bacon.toml  build
frontend/root/: index.html
frontend/src/: lib.rs
src/: lib.rs
