[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-ssh2-tokio = { version = "0.7.0", features = ["openssl"] }
env_logger = "0.10.0"
futures-util = "0.3.28"
log = "0.4.19"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["rt", "full"] }
tokio-tungstenite = "0.20.0"