[package]
name = "workflow-rs-terminal-websocket-wasm"
publish = false
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
async-trait = "0.1.72"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Document", "Element", "Text", "Window"] }
workflow-async-trait = "0.1.68"
cfg-if = "1.0.0"
serde_json = "1.0.104"
serde = { version = "1.0.178", default-features = false }

# Custom fork of workflow-rs, where I'm hacking things up
workflow-rs = { git = "https://github.com/leighleighleigh/workflow-rs", features = ["terminal", "wasm", "websocket", "log", "panic-hook"]}
js-sys = "0.3.64"
